fixing horizontall scroll layout issue

--- a/src/css/global/_mixins.scss
+++ b/src/css/global/_mixins.scss
@@ -64,3 +64,9 @@
         }
     }
 }
+
+
+@mixin page-body {
+    display: flex;
+    flex-direction: column;
+}
